--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html {
   margin: 0 auto;
   background: red;
   height: 100vh;
-  background-image: url("background.jpg");
+  background-image: url("linktree/background.jpg");
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
