--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
  max-width: auto;
  margin: 0 auto;
  background: red;
- height: 700px;
+ height: 400vh;
  background-image: url("background.jpg");
  background-position: center;
  background-size: cover;
