--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@ html {
 }
 
 .container {
- max-width: auto;
+ max-width: 400px;
  margin: 0 auto;
  background: red;
- height: 400vh;
+ height: 300vh;
  background-image: url("background.jpg");
  background-position: center;
  background-size: cover;
