--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@ html {
 }
 
 .container {
- max-width: 600px;
+ max-width: 800px;
  margin: 0 auto;
  background: red;
- height: 300vh;
+ height: 100%;
  background-image: url("background.jpg");
  background-position: center;
  background-size: cover;
