--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 html {
-  font-family: "Pixelify Sans", sans-serif;
+  font-family: "Tilt Neon", sans-serif;
   font-optical-sizing: auto;
   font-weight: <weight>;
   font-style: normal;
